# ChangeLog for dev-lang/realbasic
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/realbasic/Attic/ChangeLog,v 1.2 2008/02/29 17:55:30 carlo Exp $

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> realbasic-2007.3.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

*realbasic-2007.3 (22 Aug 2007)

  22 Aug 2007; Mike Frysinger <vapier@gentoo.org> +realbasic-2007.3.ebuild:
  Initial import.